@@ -5,6 +5,9 @@ Bug tracker at http://code.google.com/p/psutil/issues
 NEW FEATURES
  * Issue 91: per-process send_signal() and terminate() methods.
 
+BUGFIXES
+ * Issue 94: suspend() raises OSError instead of AccessDenied.
+
 
 0.1.3 - 2010-03-02
 ------------------
